--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-# Ultra-lightweight version - NO AI libraries
-gunicorn
-Flask
-flask_sqlalchemy
-flask_mail
-Flask_Cors
-email_validator
-python-dotenv
-requests
-beautifulsoup4
-toml
-nltk==3.9.1
-torch
+Flask>=2.2
+Flask-SQLAlchemy>=2.5
+Flask-Mail>=0.9.1
+Flask-Cors>=3.0.10
+python-dotenv>=0.20
+requests>=2.27
+transformers>=4.33
+torch>=1.10
+nltk>=3.7
+beautifulsoup4>=4.10
+email-validator>=1.2.1
+PyMySQL>=1.0
+toml>=0.10.2
